--- a/index.html
+++ b/index.html
@@ -1,8 +1,5 @@
-<!DOCTYPE html>
-<html
-  lang="en"
-  class="h-full min-h-screen w-full p-0 m-0 dark:bg-slate-950 dark:text-white bg-white text-gray-950 font-mono"
->
+<!doctype html>
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -13,4 +10,3 @@
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
-  
