--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>any</title>
+    <title>Hypergraph App Template</title>
+    <link rel="icon" type="image/svg+xml" href="/hypergraph.svg" />
   </head>
   <body class="h-full w-full">
     <div id="root"></div>
